chore(i18n): update translations (#1322)

--- a/i18n/de-DE.properties
+++ b/i18n/de-DE.properties
@@ -222,6 +222,8 @@ be.previousFile = Vorherige Datei
 be.previousSegment = Vorheriges Segment
 # Label for print action
 be.print = Drucken
+# If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
+be.priorCollaborator = A Prior Collaborator
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = Zuletzt verwendete
 # Message shown when there are no recent items.
@@ -366,6 +368,8 @@ be.taskActionErrorTitle = Fehler
 be.taskApprove = Abschließen
 # Error message when approving a task fails
 be.taskApproveErrorMessage = Beim Genehmigen der Aufgabe ist ein Fehler aufgetreten. Aktualisieren Sie die Seite und versuchen Sie es erneut.
+# Error message when we failed to load the collaborators when user tries to edit a task
+be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = Beim Abschließen der Aufgabe ist ein Fehler aufgetreten. Aktualisieren Sie die Seite und versuchen Sie es erneut.
 # Error message when a task creation fails
@@ -381,17 +385,21 @@ be.taskDeletePrompt = Möchten Sie diese Aufgabe wirklich dauerhaft löschen?
 # Due date for a task
 be.taskDueDate = Fällig
 # Error message when a task edit fails
-be.taskEditErrorMessage = Beim Aktualisieren dieser Aufgabe ist ein Fehler aufgetreten.
+be.taskEditErrorMessage = Beim Ändern dieser Aufgabe ist ein Fehler aufgetreten. Versuchen Sie es erneut.
 # Text to show on menu item to edit task
 be.taskEditMenuItem = Aufgabe ändern
 # Reject option for a task
 be.taskReject = Ablehnen
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = Beim Ablehnen der Aufgabe ist ein Fehler aufgetreten. Aktualisieren Sie die Seite und versuchen Sie es erneut.
+# Button name to hide task assignee list
+be.taskShowLessAssignees = Show Less
+# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
+be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
 # label for button that opens task popup
 be.tasks.addTask = Aufgabe hinzufügen
 # label for menu item that opens approval task popup
-be.tasks.addTask.approval = Bestätigungssaufgabe
+be.tasks.addTask.approval = Genehmigungsaufgabe
 # description for menu item that opens approval task popup
 be.tasks.addTask.approval.description = Genehmigung anfordern, um die Arbeit fortzuführen
 # label for menu item that opens general task popup
@@ -457,7 +465,7 @@ be.tasks.status.notStarted = Ausstehend
 # Rejected task status, where dateTime is a readable time like "Today at 2pm"
 be.tasks.status.rejected = Abgelehnt: {dateTime}
 # Label and date for task due date
-be.tasks.taskDueDate = Abgabetermin: {date}
+be.tasks.taskDueDate = Fällig am: {date}
 # Tasks for approval
 be.tasksForApproval = Aufgaben
 # Shown instead of todays date.
@@ -1162,6 +1170,8 @@ boxui.unifiedShare.collaboration.userCollabText = Benutzer
 boxui.unifiedShare.collaboratorListTitle = Personen in „{itemName}“
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = Zugriff läuft am {date} ab. Klicken Sie, um weitere Einzelheiten zu erhalten.
+# Error message when more than the maximum number of contacts is entered
+boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = Dieser Inhalt wird für externe Mitarbeiter freigegeben.
 # Text used in button label to describe permission level - co-owner
