--- a/i18n/en-AU.properties
+++ b/i18n/en-AU.properties
@@ -222,6 +222,8 @@ be.previousFile = Previous file
 be.previousSegment = Previous segment
 # Label for print action
 be.print = Print
+# If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
+be.priorCollaborator = A Prior Collaborator
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = Recents
 # Message shown when there are no recent items.
@@ -366,6 +368,8 @@ be.taskActionErrorTitle = Error
 be.taskApprove = Complete
 # Error message when approving a task fails
 be.taskApproveErrorMessage = An error has occurred while approving this task. Please refresh the page and try again.
+# Error message when we failed to load the collaborators when user tries to edit a task
+be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = An error has occurred while completing this task. Please refresh the page and try again.
 # Error message when a task creation fails
@@ -381,21 +385,25 @@ be.taskDeletePrompt = Are you sure you want to permanently delete this task?
 # Due date for a task
 be.taskDueDate = Due
 # Error message when a task edit fails
-be.taskEditErrorMessage = There was an error updating this task.
+be.taskEditErrorMessage = An error occurred while modifying this task. Please try again.
 # Text to show on menu item to edit task
 be.taskEditMenuItem = Modify task
 # Reject option for a task
 be.taskReject = Decline
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = An error has occurred while rejecting this task. Please refresh the page and try again.
+# Button name to hide task assignee list
+be.taskShowLessAssignees = Show Less
+# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
+be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
 # label for button that opens task popup
 be.tasks.addTask = Add task
 # label for menu item that opens approval task popup
-be.tasks.addTask.approval = Approval Task
+be.tasks.addTask.approval = Approval task
 # description for menu item that opens approval task popup
-be.tasks.addTask.approval.description = Request an approval to move work forward
+be.tasks.addTask.approval.description = Request approval to progress with work
 # label for menu item that opens general task popup
-be.tasks.addTask.general = General Task
+be.tasks.addTask.general = General task
 # description for menu item that opens general task popup
 be.tasks.addTask.general.description = Keep track of work that needs to get done
 # label for cancel button in create task popup
@@ -723,7 +731,7 @@ boxui.metadataInstanceEditor.cannotApplyCascadePolicyText = Cascade policy canno
 # Tooltip text a user can use to learn more about cascading metadata policy
 boxui.metadataInstanceEditor.cascadePolicyLearnMore = Learn more
 # Tooltip text that asks the user what they want to do when applying cascading to their metadata policy
-boxui.metadataInstanceEditor.cascadePolicyModeQuestion = In the event of conflicts when applying this template and its values to existing items, what would you prefer to do? This is a one time action.
+boxui.metadataInstanceEditor.cascadePolicyModeQuestion = In the event of conflicts when applying this template and its values to existing items, what would you prefer to do? This is a one-time action.
 # Label for radio button that selects overwrite mode for cascading policy
 boxui.metadataInstanceEditor.cascadePolicyOverwriteMode = Overwrite all existing template values
 # Label for radio button that selects skip mode for cascading policy
@@ -903,7 +911,7 @@ boxui.queryBar.tooltipEnterValueError = Please enter a value
 # Text displayed on the Tooltip for an input field of type float
 boxui.queryBar.tooltipInvalidFloatError = Please enter a decimal number
 # Text displayed on the Tooltip for an input field of type number
-boxui.queryBar.tooltipInvalidNumberError = Please enter an Integer
+boxui.queryBar.tooltipInvalidNumberError = Please enter an integer
 # Text displayed on the Tooltip for a date field
 boxui.queryBar.tooltipSelectDateError = Please select a date
 # Text displayed on the Tooltip for a value field
@@ -1162,6 +1170,8 @@ boxui.unifiedShare.collaboration.userCollabText = User
 boxui.unifiedShare.collaboratorListTitle = People in '{itemName}'
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = Access expires on {date}. Click for details.
+# Error message when more than the maximum number of contacts is entered
+boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = This content will be shared with external collaborators.
 # Text used in button label to describe permission level - co-owner
