--- a/i18n/es-419.properties
+++ b/i18n/es-419.properties
@@ -222,6 +222,8 @@ be.previousFile = Archivo anterior
 be.previousSegment = Segmento anterior
 # Label for print action
 be.print = Imprimir
+# If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
+be.priorCollaborator = A Prior Collaborator
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = Recientes
 # Message shown when there are no recent items.
@@ -366,6 +368,8 @@ be.taskActionErrorTitle = Error
 be.taskApprove = Completar
 # Error message when approving a task fails
 be.taskApproveErrorMessage = Se ha producido un error al aprobar esta tarea. Actualice la página e inténtelo de nuevo.
+# Error message when we failed to load the collaborators when user tries to edit a task
+be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = Se ha producido un error al completar esta tarea. Actualice la página e inténtelo de nuevo.
 # Error message when a task creation fails
@@ -381,13 +385,17 @@ be.taskDeletePrompt = ¿Seguro que desea eliminar esta tarea de forma permanente
 # Due date for a task
 be.taskDueDate = Fecha de vencimiento
 # Error message when a task edit fails
-be.taskEditErrorMessage = Se ha producido un error al actualizar esta tarea.
+be.taskEditErrorMessage = Se ha producido un error al modificar esta tarea. Inténtelo de nuevo.
 # Text to show on menu item to edit task
 be.taskEditMenuItem = Modificar tarea
 # Reject option for a task
 be.taskReject = Rechazar
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = Se ha producido un error al rechazar esta tarea. Actualice la página e inténtelo de nuevo.
+# Button name to hide task assignee list
+be.taskShowLessAssignees = Show Less
+# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
+be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
 # label for button that opens task popup
 be.tasks.addTask = Agregar tarea
 # label for menu item that opens approval task popup
@@ -405,7 +413,7 @@ be.tasks.addTaskForm.dueDateLabel = Fecha de vencimiento
 # label for task create form message input
 be.tasks.addTaskForm.messageLabel = Mensaje
 # label for task create form assignee input
-be.tasks.addTaskForm.selectAssigneesLabel = Seleccionar personas asignadas
+be.tasks.addTaskForm.selectAssigneesLabel = Seleccionar destinatarios
 # label for create button in create task modal in create mode
 be.tasks.addTaskForm.submit = Crear
 # title for approval task popup
@@ -439,7 +447,7 @@ be.tasks.feed.headline.general.currentUser = {user} le ha asignado una tarea
 # Label for a task in progress
 be.tasks.feed.inProgressLabel = En curso
 # Label for button to expand flyout to see all task assignees
-be.tasks.feed.moreAssigneesLabel = Ver todas las personas asignadas
+be.tasks.feed.moreAssigneesLabel = Ver todos los destinatarios
 # Reject option for an approval task
 be.tasks.feed.rejectAction = Rechazar
 # Label for a rejected task
@@ -449,15 +457,15 @@ be.tasks.feed.statusLabel = Estado: {taskStatus}
 # Approved task status, where dateTime is a readable time like "Today at 2pm"
 be.tasks.status.approved = Aprobada {dateTime}
 # Completed task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.completed = {dateTime} completada
+be.tasks.status.completed = Completada ({dateTime})
 # Task status when in progress
 be.tasks.status.inProgress = En espera
 # Task status when not started
 be.tasks.status.notStarted = En espera
 # Rejected task status, where dateTime is a readable time like "Today at 2pm"
-be.tasks.status.rejected = {dateTime} rechazada
+be.tasks.status.rejected = Rechazada ({dateTime})
 # Label and date for task due date
-be.tasks.taskDueDate = Fecha de entrega: {date}
+be.tasks.taskDueDate = Vencimiento: {date}
 # Tasks for approval
 be.tasksForApproval = Tareas
 # Shown instead of todays date.
@@ -723,7 +731,7 @@ boxui.metadataInstanceEditor.cannotApplyCascadePolicyText = En este momento, no 
 # Tooltip text a user can use to learn more about cascading metadata policy
 boxui.metadataInstanceEditor.cascadePolicyLearnMore = Más información
 # Tooltip text that asks the user what they want to do when applying cascading to their metadata policy
-boxui.metadataInstanceEditor.cascadePolicyModeQuestion = En caso de conflicto al aplicar esta plantilla y sus valores a elementos existentes, ¿qué desea hacer? Esta acción solo se puede realizar una vez.
+boxui.metadataInstanceEditor.cascadePolicyModeQuestion = En caso de conflicto al aplicar esta plantilla y sus valores a elementos existentes, ¿qué desea hacer? Esta acción se realiza una sola vez.
 # Label for radio button that selects overwrite mode for cascading policy
 boxui.metadataInstanceEditor.cascadePolicyOverwriteMode = Sobrescribir todos los valores de plantilla existentes
 # Label for radio button that selects skip mode for cascading policy
@@ -791,7 +799,7 @@ boxui.metadataInstanceEditor.noMetadata = No se han aplicado metadatos.
 # Instructions to create metadata for the selected folder
 boxui.metadataInstanceEditor.noMetadataAddTemplate = Haga clic en 'Agregar', en la parte superior derecha, para agregar metadatos a este elemento.
 # Informational text below cascade policy description and explains to the user that the policy will take some time to take effect.
-boxui.metadataInstanceEditor.operationNotImmediate = Esta operación no es inmediata, por lo que podría tardar.
+boxui.metadataInstanceEditor.operationNotImmediate = Esta operación no es inmediata, por lo que puede tardar cierto tiempo en realizarse.
 # Label to remove a template
 boxui.metadataInstanceEditor.removeTemplate = Quitar
 # Label to add a template
@@ -875,7 +883,7 @@ boxui.queryBar.applyFiltersButtonText = Aplicar
 # Text on the columns button, on click opens a menu which allows users to choose which columns to render
 boxui.queryBar.columnsButtonText = Columnas
 # Text on the columns button, if one or more columns have been hidden then it will display this text
-boxui.queryBar.columnsHiddenButtonText = {count, plural, one {1 Columna oculta} other {{count} Columnas ocultas}}
+boxui.queryBar.columnsHiddenButtonText = {count, plural, one {1 columna oculta} other {{count} columnas ocultas}}
 # Text on the connector dropdown, on click should open a dropdown showing either AND or OR
 boxui.queryBar.connectorAndText = AND
 # Text on the connector dropdown, on click should open a dropdown showing either AND or OR
@@ -1162,6 +1170,8 @@ boxui.unifiedShare.collaboration.userCollabText = Usuario
 boxui.unifiedShare.collaboratorListTitle = Personas en '{itemName}'
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = El acceso caduca el {date}. Haga clic para obtener información.
+# Error message when more than the maximum number of contacts is entered
+boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = Este contenido se compartirá con colaboradores externos.
 # Text used in button label to describe permission level - co-owner
