--- a/i18n/fi-FI.properties
+++ b/i18n/fi-FI.properties
@@ -222,6 +222,8 @@ be.previousFile = Edellinen tiedosto
 be.previousSegment = Edellinen osa
 # Label for print action
 be.print = Tulosta
+# If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
+be.priorCollaborator = A Prior Collaborator
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = Viimeisimmät
 # Message shown when there are no recent items.
@@ -366,6 +368,8 @@ be.taskActionErrorTitle = Virhe
 be.taskApprove = Valmis
 # Error message when approving a task fails
 be.taskApproveErrorMessage = Tehtävän hyväksymisen aikana tapahtui virhe. Päivitä sivu ja yritä uudelleen.
+# Error message when we failed to load the collaborators when user tries to edit a task
+be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = Tehtävän viimeistelyn aikana tapahtui virhe. Päivitä sivu ja yritä uudelleen.
 # Error message when a task creation fails
@@ -381,13 +385,17 @@ be.taskDeletePrompt = Haluatko varmasti poistaa tämän tehtävän pysyvästi?
 # Due date for a task
 be.taskDueDate = Määräaika
 # Error message when a task edit fails
-be.taskEditErrorMessage = Virhe päivitettäessä tehtävää.
+be.taskEditErrorMessage = Tehtävää muokattaessa tapahtui virhe. Yritä uudelleen.
 # Text to show on menu item to edit task
 be.taskEditMenuItem = Muokkaa tehtävää
 # Reject option for a task
 be.taskReject = Hylkää
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = Tehtävän hylkäämisen aikana tapahtui virhe. Päivitä sivu ja yritä uudelleen.
+# Button name to hide task assignee list
+be.taskShowLessAssignees = Show Less
+# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
+be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
 # label for button that opens task popup
 be.tasks.addTask = Lisää tehtävä
 # label for menu item that opens approval task popup
@@ -1162,6 +1170,8 @@ boxui.unifiedShare.collaboration.userCollabText = Käyttäjä
 boxui.unifiedShare.collaboratorListTitle = Kohteen {itemName} käyttäjät
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = Käyttöoikeus päättyy {date}. Lisätietoja napsauttamalla.
+# Error message when more than the maximum number of contacts is entered
+boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = Tämä sisältö jaetaan ulkoisille yhteistyökumppaneille.
 # Text used in button label to describe permission level - co-owner
