--- a/i18n/fr-CA.properties
+++ b/i18n/fr-CA.properties
@@ -222,6 +222,8 @@ be.previousFile = Fichier précédent
 be.previousSegment = Segment précédent
 # Label for print action
 be.print = Imprimer
+# If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
+be.priorCollaborator = A Prior Collaborator
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = Récents
 # Message shown when there are no recent items.
@@ -366,6 +368,8 @@ be.taskActionErrorTitle = Erreur
 be.taskApprove = Terminé
 # Error message when approving a task fails
 be.taskApproveErrorMessage = Une erreur s'est produite lors de l'approbation de cette tâche. Veuillez actualiser la page et réessayer.
+# Error message when we failed to load the collaborators when user tries to edit a task
+be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = Une erreur s'est produite lors de la finalisation de cette tâche. Veuillez actualiser la page et réessayer.
 # Error message when a task creation fails
@@ -381,19 +385,23 @@ be.taskDeletePrompt = Voulez-vous vraiment supprimer définitivement cette tâch
 # Due date for a task
 be.taskDueDate = Échéance
 # Error message when a task edit fails
-be.taskEditErrorMessage = Une erreur s'est produite lors de la mise à jour de cette tâche.
+be.taskEditErrorMessage = Une erreur s'est produite lors de la modification de cette tâche. Veuillez réessayer.
 # Text to show on menu item to edit task
 be.taskEditMenuItem = Modifier la tâche
 # Reject option for a task
 be.taskReject = Refuser
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = Une erreur s'est produite lors du refus de cette tâche. Veuillez actualiser la page et réessayer.
+# Button name to hide task assignee list
+be.taskShowLessAssignees = Show Less
+# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
+be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
 # label for button that opens task popup
 be.tasks.addTask = Ajouter une tâche
 # label for menu item that opens approval task popup
-be.tasks.addTask.approval = Tâche d’approbation
+be.tasks.addTask.approval = Tâche d'approbation
 # description for menu item that opens approval task popup
-be.tasks.addTask.approval.description = Demander une approbation pour passer à l'étape suivante
+be.tasks.addTask.approval.description = Demander une approbation pour poursuivre votre travail
 # label for menu item that opens general task popup
 be.tasks.addTask.general = Tâche générale
 # description for menu item that opens general task popup
@@ -427,7 +435,7 @@ be.tasks.feed.assigneeList.title = Destinataires
 # Completion option for a general task
 be.tasks.feed.completeAction = Marquer comme terminée
 # Label for a completed task
-be.tasks.feed.completedLabel = Terminée
+be.tasks.feed.completedLabel = Terminé
 # Comment headline for an approval task
 be.tasks.feed.headline.approval = {user} a attribué une tâche d'approbation
 # Comment headline for an approval task assigned to the current user
@@ -443,7 +451,7 @@ be.tasks.feed.moreAssigneesLabel = Afficher tous les destinataires
 # Reject option for an approval task
 be.tasks.feed.rejectAction = Refuser
 # Label for a rejected task
-be.tasks.feed.rejectedLabel = Rejetée
+be.tasks.feed.rejectedLabel = Rejeté
 # Label for the task status
 be.tasks.feed.statusLabel = Statut : {taskStatus}
 # Approved task status, where dateTime is a readable time like "Today at 2pm"
@@ -723,7 +731,7 @@ boxui.metadataInstanceEditor.cannotApplyCascadePolicyText = La politique en casc
 # Tooltip text a user can use to learn more about cascading metadata policy
 boxui.metadataInstanceEditor.cascadePolicyLearnMore = En savoir plus
 # Tooltip text that asks the user what they want to do when applying cascading to their metadata policy
-boxui.metadataInstanceEditor.cascadePolicyModeQuestion = En cas de conflits lors de l'application de ce modèle et de ses valeurs aux éléments existants, que souhaiteriez-vous faire ? Il s’agit d’une action ponctuelle.
+boxui.metadataInstanceEditor.cascadePolicyModeQuestion = En cas de conflits lors de l'application de ce modèle et de ses valeurs aux éléments existants, que souhaiteriez-vous faire ? Il s'agit d'une action unique.
 # Label for radio button that selects overwrite mode for cascading policy
 boxui.metadataInstanceEditor.cascadePolicyOverwriteMode = Remplacer toutes les valeurs de modèle existantes
 # Label for radio button that selects skip mode for cascading policy
@@ -755,7 +763,7 @@ boxui.metadataInstanceEditor.customValuePlaceholder = par ex. 42
 # Text that shows in a tooltip above the edit pencil button.
 boxui.metadataInstanceEditor.editTooltip = Modifier des métadonnées
 # Label for enable cascade policy toggle switch
-boxui.metadataInstanceEditor.enableCascadePolicy = Activer la politique en cascade
+boxui.metadataInstanceEditor.enableCascadePolicy = Activer la règle en cascade
 # Text to indicate to select one or more values from drop down list
 boxui.metadataInstanceEditor.fieldMultiSelectValue = Sélectionner les valeurs
 # Text to indicate no value exists
@@ -791,7 +799,7 @@ boxui.metadataInstanceEditor.noMetadata = Aucune métadonnée appliquée
 # Instructions to create metadata for the selected folder
 boxui.metadataInstanceEditor.noMetadataAddTemplate = Cliquez sur « Ajouter » dans le coin supérieur droit pour ajouter des métadonnées à cet élément
 # Informational text below cascade policy description and explains to the user that the policy will take some time to take effect.
-boxui.metadataInstanceEditor.operationNotImmediate = Cette opération n’est pas immédiate et peut prendre un certain temps.
+boxui.metadataInstanceEditor.operationNotImmediate = Cette opération n'est pas immédiate et peut durer un certain temps.
 # Label to remove a template
 boxui.metadataInstanceEditor.removeTemplate = Supprimer
 # Label to add a template
@@ -1162,6 +1170,8 @@ boxui.unifiedShare.collaboration.userCollabText = Utilisateur
 boxui.unifiedShare.collaboratorListTitle = Utilisateurs dans « {itemName} »
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = Date d'expiration de l'accès : {date}. Cliquez pour plus d'informations.
+# Error message when more than the maximum number of contacts is entered
+boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = Ce contenu sera partagé avec des collaborateurs externes.
 # Text used in button label to describe permission level - co-owner
