--- a/i18n/ko-KR.properties
+++ b/i18n/ko-KR.properties
@@ -133,7 +133,7 @@ be.expand = 확대
 # Label for face skill section in the preview sidebar
 be.faceSkill = 페이스
 # Call-to-action text describing what to do to navigate to specified feedback form
-be.feedbackCtaText = 피드백 제공을 제공하려면 클릭
+be.feedbackCtaText = 피드백을 제공하려면 클릭
 # Accessible text used to describe the form used for feedback
 be.feedbackFormDescription = 베타 피드백 양식
 # File access stats error message
@@ -222,6 +222,8 @@ be.previousFile = 이전 파일
 be.previousSegment = 이전 세그먼트
 # Label for print action
 be.print = 인쇄
+# If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
+be.priorCollaborator = A Prior Collaborator
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = 최근 항목
 # Message shown when there are no recent items.
@@ -366,6 +368,8 @@ be.taskActionErrorTitle = 오류
 be.taskApprove = 완료
 # Error message when approving a task fails
 be.taskApproveErrorMessage = 이 작업을 승인하는 중 오류가 발생했습니다. 페이지를 새로 고치고 다시 시도하십시오.
+# Error message when we failed to load the collaborators when user tries to edit a task
+be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = 이 작업을 완료하는 중 오류가 발생했습니다. 페이지를 새로 고치고 다시 시도하십시오.
 # Error message when a task creation fails
@@ -381,13 +385,17 @@ be.taskDeletePrompt = 이 작업을 영구적으로 삭제하시겠습니까?
 # Due date for a task
 be.taskDueDate = 기한
 # Error message when a task edit fails
-be.taskEditErrorMessage = 이 작업을 업데이트하는 동안 오류가 발생했습니다.
+be.taskEditErrorMessage = 이 작업을 수정하는 중 오류가 발생했습니다. 다시 시도하십시오.
 # Text to show on menu item to edit task
 be.taskEditMenuItem = 작업 수정
 # Reject option for a task
 be.taskReject = 거부
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = 이 작업을 거부하는 중 오류가 발생했습니다. 페이지를 새로 고치고 다시 시도하십시오.
+# Button name to hide task assignee list
+be.taskShowLessAssignees = Show Less
+# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
+be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
 # label for button that opens task popup
 be.tasks.addTask = 작업 추가
 # label for menu item that opens approval task popup
@@ -1162,6 +1170,8 @@ boxui.unifiedShare.collaboration.userCollabText = 사용자
 boxui.unifiedShare.collaboratorListTitle = '{itemName}' 내 사용자
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = {date}에 액세스가 만료됩니다. 자세한 사항을 확인하려면 클릭하십시오.
+# Error message when more than the maximum number of contacts is entered
+boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = 이 콘텐츠는 외부 공동 작업자와 공유됩니다.
 # Text used in button label to describe permission level - co-owner
