--- a/i18n/nl-NL.properties
+++ b/i18n/nl-NL.properties
@@ -222,6 +222,8 @@ be.previousFile = Vorige bestand
 be.previousSegment = Vorige segment
 # Label for print action
 be.print = Afdrukken
+# If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
+be.priorCollaborator = A Prior Collaborator
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = Recente bestanden
 # Message shown when there are no recent items.
@@ -366,6 +368,8 @@ be.taskActionErrorTitle = Fout
 be.taskApprove = Voltooien
 # Error message when approving a task fails
 be.taskApproveErrorMessage = Er is een fout opgetreden tijdens het goedkeuren van deze taak. Vernieuw de pagina en probeer het opnieuw.
+# Error message when we failed to load the collaborators when user tries to edit a task
+be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = Er is een fout opgetreden tijdens het voltooien van deze taak. Vernieuw de pagina en probeer het opnieuw.
 # Error message when a task creation fails
@@ -381,13 +385,17 @@ be.taskDeletePrompt = Weet u zeker dat u deze taak permanent wilt verwijderen?
 # Due date for a task
 be.taskDueDate = Deadline
 # Error message when a task edit fails
-be.taskEditErrorMessage = Er is een fout opgetreden bij het bijwerken van deze taak.
+be.taskEditErrorMessage = Er is een fout opgetreden tijdens het wijzigen van deze taak. Probeer het opnieuw.
 # Text to show on menu item to edit task
 be.taskEditMenuItem = Taak wijzigen
 # Reject option for a task
 be.taskReject = Weigeren
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = Er is een fout opgetreden tijdens het afwijzen van deze taak. Vernieuw de pagina en probeer het opnieuw.
+# Button name to hide task assignee list
+be.taskShowLessAssignees = Show Less
+# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
+be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
 # label for button that opens task popup
 be.tasks.addTask = Taak toevoegen
 # label for menu item that opens approval task popup
@@ -1095,7 +1103,7 @@ boxui.share.sharedLinkSettings.allowDownloadLabel = Gebruikers met de gedeelde l
 # Title for Allow Download section
 boxui.share.sharedLinkSettings.allowDownloadTitle = Downloaden toestaan
 # Label for Custom URL text input field
-boxui.share.sharedLinkSettings.customURLLabel = Aangepaste URL
+boxui.share.sharedLinkSettings.customURLLabel = Openbare aangepaste URL
 # Title for Direct Link section
 boxui.share.sharedLinkSettings.directLinkLabel = Directe link
 # Label for option to enable expiration on a Shared Link
@@ -1129,7 +1137,7 @@ boxui.share.uploadTableHeaderText = Uploaden
 # Text for Uploader permission level in permissions table
 boxui.share.uploaderLevelText = Uploader
 # Text label for custom URL section
-boxui.share.vanityURLEnableText = Aangepaste URL inschakelen
+boxui.share.vanityURLEnableText = Publiceer inhoud voor een breed publiek met een aangepaste openbare URL
 # Text for Viewer permission level in permissions table
 boxui.share.viewerLevelText = Viewer
 # Text for Viewer Uploader permission level in permissions table
@@ -1162,6 +1170,8 @@ boxui.unifiedShare.collaboration.userCollabText = Gebruiker
 boxui.unifiedShare.collaboratorListTitle = Personen in "{itemName}"
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = Toegang verloopt op {date}. Klik voor details.
+# Error message when more than the maximum number of contacts is entered
+boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = Deze inhoud zal worden gedeeld met externe medebewerkers.
 # Text used in button label to describe permission level - co-owner
