--- a/i18n/pl-PL.properties
+++ b/i18n/pl-PL.properties
@@ -222,6 +222,8 @@ be.previousFile = Poprzedni plik
 be.previousSegment = Poprzedni segment
 # Label for print action
 be.print = Drukuj
+# If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
+be.priorCollaborator = A Prior Collaborator
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = Ostatnie
 # Message shown when there are no recent items.
@@ -366,6 +368,8 @@ be.taskActionErrorTitle = Błąd
 be.taskApprove = Gotowe
 # Error message when approving a task fails
 be.taskApproveErrorMessage = Podczas zatwierdzania tego zadania wystąpił błąd. Odśwież stronę i spróbuj ponownie.
+# Error message when we failed to load the collaborators when user tries to edit a task
+be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = Podczas kończenia tego zadania wystąpił błąd. Odśwież stronę i spróbuj ponownie.
 # Error message when a task creation fails
@@ -381,13 +385,17 @@ be.taskDeletePrompt = Czy na pewno chcesz trwale usunąć to zadanie?
 # Due date for a task
 be.taskDueDate = Termin
 # Error message when a task edit fails
-be.taskEditErrorMessage = Podczas aktualizowania zadania wystąpił błąd.
+be.taskEditErrorMessage = Podczas modyfikowania tego zadania wystąpił błąd. Spróbuj ponownie.
 # Text to show on menu item to edit task
 be.taskEditMenuItem = Modyfikuj zadanie
 # Reject option for a task
 be.taskReject = Odrzuć
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = Podczas odrzucania tego zadania wystąpił błąd. Odśwież stronę i spróbuj ponownie.
+# Button name to hide task assignee list
+be.taskShowLessAssignees = Show Less
+# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
+be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
 # label for button that opens task popup
 be.tasks.addTask = Dodaj zadanie
 # label for menu item that opens approval task popup
@@ -1162,6 +1170,8 @@ boxui.unifiedShare.collaboration.userCollabText = Użytkownik
 boxui.unifiedShare.collaboratorListTitle = Osoby w „{itemName}”
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = Dostęp wygasa {date}. Kliknij tutaj, aby uzyskać szczegółowe informacje.
+# Error message when more than the maximum number of contacts is entered
+boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = Ta zawartość zostanie udostępniona zewnętrznym współpracownikom.
 # Text used in button label to describe permission level - co-owner
