--- a/i18n/tr-TR.properties
+++ b/i18n/tr-TR.properties
@@ -222,6 +222,8 @@ be.previousFile = Önceki Dosya
 be.previousSegment = Önceki Bölüm
 # Label for print action
 be.print = Yazdır
+# If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
+be.priorCollaborator = A Prior Collaborator
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = Son Dosyalar
 # Message shown when there are no recent items.
@@ -366,6 +368,8 @@ be.taskActionErrorTitle = Hata
 be.taskApprove = Tamamla
 # Error message when approving a task fails
 be.taskApproveErrorMessage = Bu görev onaylanırken bir hata oluştu. Lütfen sayfayı yenileyin ve tekrar deneyin.
+# Error message when we failed to load the collaborators when user tries to edit a task
+be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = Bu görev tamamlanırken bir hata oluştu. Lütfen sayfayı yenileyin ve tekrar deneyin.
 # Error message when a task creation fails
@@ -381,13 +385,17 @@ be.taskDeletePrompt = Bu görevi kalıcı olarak silmek istediğinizden emin mis
 # Due date for a task
 be.taskDueDate = Son Tarih
 # Error message when a task edit fails
-be.taskEditErrorMessage = Bu görev güncellenirken bir hata oluştu.
+be.taskEditErrorMessage = Bu görev değiştirilirken bir hata oluştu. Lütfen tekrar deneyin.
 # Text to show on menu item to edit task
 be.taskEditMenuItem = Görevi değiştir
 # Reject option for a task
 be.taskReject = Geri Çevir
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = Bu görev reddedilirken bir hata oluştu. Lütfen sayfayı yenileyin ve tekrar deneyin.
+# Button name to hide task assignee list
+be.taskShowLessAssignees = Show Less
+# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
+be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
 # label for button that opens task popup
 be.tasks.addTask = Görev ekleyin
 # label for menu item that opens approval task popup
@@ -1162,6 +1170,8 @@ boxui.unifiedShare.collaboration.userCollabText = Kullanıcı
 boxui.unifiedShare.collaboratorListTitle = "{itemName}" dahilindeki kişiler
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = Erişim {date} tarihinde sona eriyor. Detaylar için tıklayın.
+# Error message when more than the maximum number of contacts is entered
+boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = Bu içerik harici işbirlikçilerle paylaşılacak.
 # Text used in button label to describe permission level - co-owner
