--- a/i18n/zh-TW.properties
+++ b/i18n/zh-TW.properties
@@ -222,6 +222,8 @@ be.previousFile = 前一個檔案
 be.previousSegment = 上一個區段
 # Label for print action
 be.print = 列印
+# If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
+be.priorCollaborator = A Prior Collaborator
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = 最近項目
 # Message shown when there are no recent items.
@@ -366,6 +368,8 @@ be.taskActionErrorTitle = 錯誤
 be.taskApprove = 完成
 # Error message when approving a task fails
 be.taskApproveErrorMessage = 核准此工作時發生錯誤。請重新整理頁面並再試一次。
+# Error message when we failed to load the collaborators when user tries to edit a task
+be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = 完成此工作時發生錯誤。請重新整理頁面並再試一次。
 # Error message when a task creation fails
@@ -381,13 +385,17 @@ be.taskDeletePrompt = 確定要永久刪除此工作？
 # Due date for a task
 be.taskDueDate = 到期
 # Error message when a task edit fails
-be.taskEditErrorMessage = 更新此工作時發生錯誤。
+be.taskEditErrorMessage = 修改此工作時發生錯誤，請再試一次。
 # Text to show on menu item to edit task
 be.taskEditMenuItem = 修改工作
 # Reject option for a task
 be.taskReject = 拒絕
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = 拒絕此工作時發生錯誤。請重新整理頁面並再試一次。
+# Button name to hide task assignee list
+be.taskShowLessAssignees = Show Less
+# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
+be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
 # label for button that opens task popup
 be.tasks.addTask = 新增工作
 # label for menu item that opens approval task popup
@@ -429,9 +437,9 @@ be.tasks.feed.completeAction = 標記為已完成
 # Label for a completed task
 be.tasks.feed.completedLabel = 已完成
 # Comment headline for an approval task
-be.tasks.feed.headline.approval = {user} 已指定核准工作
+be.tasks.feed.headline.approval = {user} 已指派核准工作
 # Comment headline for an approval task assigned to the current user
-be.tasks.feed.headline.approval.currentUser = {user} 已指定核准工作給您
+be.tasks.feed.headline.approval.currentUser = {user} 已指派核准工作給您
 # Comment headline for a general task
 be.tasks.feed.headline.general = {user} 已指派工作
 # Comment headline for a general task assigned to the current user
@@ -901,7 +909,7 @@ boxui.queryBar.templatesLoadingButtonText = 範本名稱
 # Text displayed on the Tooltip for an input field
 boxui.queryBar.tooltipEnterValueError = 請輸入值
 # Text displayed on the Tooltip for an input field of type float
-boxui.queryBar.tooltipInvalidFloatError = 請輸入十進位數字
+boxui.queryBar.tooltipInvalidFloatError = 請輸入含小數之數字
 # Text displayed on the Tooltip for an input field of type number
 boxui.queryBar.tooltipInvalidNumberError = 請輸入整數
 # Text displayed on the Tooltip for a date field
@@ -1162,6 +1170,8 @@ boxui.unifiedShare.collaboration.userCollabText = 使用者
 boxui.unifiedShare.collaboratorListTitle = 「{itemName}」中的人員
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = 存取權限將於 {date} 到期。按一下以取得詳細資料。
+# Error message when more than the maximum number of contacts is entered
+boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = 此內容將與外部共同作業者共用。
 # Text used in button label to describe permission level - co-owner
