--- a/i18n/da-DK.properties
+++ b/i18n/da-DK.properties
@@ -222,6 +222,8 @@ be.previousFile = Forrige fil
 be.previousSegment = Forrige segment
 # Label for print action
 be.print = Udskriv
+# If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
+be.priorCollaborator = A Prior Collaborator
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = Seneste
 # Message shown when there are no recent items.
@@ -366,6 +368,8 @@ be.taskActionErrorTitle = Fejl
 be.taskApprove = Fuldfør
 # Error message when approving a task fails
 be.taskApproveErrorMessage = Der opstod en fejl under godkendelse af denne opgave. Opdater siden, og prøv igen.
+# Error message when we failed to load the collaborators when user tries to edit a task
+be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = Der opstod en fejl under fuldførelse af denne opgave. Opdater siden, og prøv igen.
 # Error message when a task creation fails
@@ -381,19 +385,23 @@ be.taskDeletePrompt = Er du sikker på, at du vil slette denne opgave permanent?
 # Due date for a task
 be.taskDueDate = Deadline
 # Error message when a task edit fails
-be.taskEditErrorMessage = Der opstod en fejl under opdatering af denne opgave.
+be.taskEditErrorMessage = Der opstod en fejl under redigering af denne opgave. Prøv igen.
 # Text to show on menu item to edit task
 be.taskEditMenuItem = Rediger opgave
 # Reject option for a task
 be.taskReject = Afvis
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = Der opstod en fejl under afvisningen af denne opgave. Opdater siden, og prøv igen.
+# Button name to hide task assignee list
+be.taskShowLessAssignees = Show Less
+# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
+be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
 # label for button that opens task popup
 be.tasks.addTask = Tilføj opgave
 # label for menu item that opens approval task popup
 be.tasks.addTask.approval = Godkendelsesopgave
 # description for menu item that opens approval task popup
-be.tasks.addTask.approval.description = Anmod om godkendelse til at flytte arbejde fremad
+be.tasks.addTask.approval.description = Anmod om godkendelse til at fortsætte arbejdet
 # label for menu item that opens general task popup
 be.tasks.addTask.general = Generel opgave
 # description for menu item that opens general task popup
@@ -1162,6 +1170,8 @@ boxui.unifiedShare.collaboration.userCollabText = Bruger
 boxui.unifiedShare.collaboratorListTitle = Personer i '{itemName}'
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = Adgang udløber d. {date}. Klik for at se detaljer.
+# Error message when more than the maximum number of contacts is entered
+boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = Dette indhold bliver delt med eksterne samarbejdspartnere.
 # Text used in button label to describe permission level - co-owner
