--- a/i18n/en-CA.properties
+++ b/i18n/en-CA.properties
@@ -222,6 +222,8 @@ be.previousFile = Previous File
 be.previousSegment = Previous Segment
 # Label for print action
 be.print = Print
+# If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
+be.priorCollaborator = A Prior Collaborator
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = Recents
 # Message shown when there are no recent items.
@@ -366,6 +368,8 @@ be.taskActionErrorTitle = Error
 be.taskApprove = Complete
 # Error message when approving a task fails
 be.taskApproveErrorMessage = An error has occurred while approving this task. Please refresh the page and try again.
+# Error message when we failed to load the collaborators when user tries to edit a task
+be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = An error has occurred while completing this task. Please refresh the page and try again.
 # Error message when a task creation fails
@@ -388,6 +392,10 @@ be.taskEditMenuItem = Modify task
 be.taskReject = Decline
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = An error has occurred while rejecting this task. Please refresh the page and try again.
+# Button name to hide task assignee list
+be.taskShowLessAssignees = Show Less
+# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
+be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
 # label for button that opens task popup
 be.tasks.addTask = Add Task
 # label for menu item that opens approval task popup
@@ -1162,6 +1170,8 @@ boxui.unifiedShare.collaboration.userCollabText = User
 boxui.unifiedShare.collaboratorListTitle = People in '{itemName}'
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = Access expires on {date}. Click for details.
+# Error message when more than the maximum number of contacts is entered
+boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = This content will be shared with external collaborators.
 # Text used in button label to describe permission level - co-owner
