--- a/i18n/it-IT.properties
+++ b/i18n/it-IT.properties
@@ -222,6 +222,8 @@ be.previousFile = File precedente
 be.previousSegment = Segmento precedente
 # Label for print action
 be.print = Stampa
+# If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
+be.priorCollaborator = A Prior Collaborator
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = Recenti
 # Message shown when there are no recent items.
@@ -366,6 +368,8 @@ be.taskActionErrorTitle = Errore
 be.taskApprove = Completa
 # Error message when approving a task fails
 be.taskApproveErrorMessage = Si è verificato un errore durante l'approvazione dell'attività. Aggiorna la pagina e riprova.
+# Error message when we failed to load the collaborators when user tries to edit a task
+be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = Si è verificato un errore durante il completamento dell'attività. Aggiorna la pagina e riprova.
 # Error message when a task creation fails
@@ -381,13 +385,17 @@ be.taskDeletePrompt = Eliminare definitivamente questa attività?
 # Due date for a task
 be.taskDueDate = Scadenza
 # Error message when a task edit fails
-be.taskEditErrorMessage = Errore durante l'aggiornamento di questa attività.
+be.taskEditErrorMessage = Si è verificato un errore durante la modifica di questa attività. Riprova.
 # Text to show on menu item to edit task
 be.taskEditMenuItem = Modifica attività
 # Reject option for a task
 be.taskReject = Rifiuta
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = Si è verificato un errore durante il rifiuto dell'attività. Aggiorna la pagina e riprova.
+# Button name to hide task assignee list
+be.taskShowLessAssignees = Show Less
+# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
+be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
 # label for button that opens task popup
 be.tasks.addTask = Aggiungi attività
 # label for menu item that opens approval task popup
@@ -1162,6 +1170,8 @@ boxui.unifiedShare.collaboration.userCollabText = Utente
 boxui.unifiedShare.collaboratorListTitle = Persone in "{itemName}"
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = L'accesso scade in data {date}. Fai clic per i dettagli.
+# Error message when more than the maximum number of contacts is entered
+boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = Questo contenuto sarà condiviso con i collaboratori esterni.
 # Text used in button label to describe permission level - co-owner
