--- a/i18n/nb-NO.properties
+++ b/i18n/nb-NO.properties
@@ -222,6 +222,8 @@ be.previousFile = Forrige fil
 be.previousSegment = Forrige segment
 # Label for print action
 be.print = Skriv ut
+# If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
+be.priorCollaborator = A Prior Collaborator
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = Nylige
 # Message shown when there are no recent items.
@@ -366,6 +368,8 @@ be.taskActionErrorTitle = Feil
 be.taskApprove = Fullfør
 # Error message when approving a task fails
 be.taskApproveErrorMessage = Det oppsto en feil ved godkjenningen av denne oppgaven. Last inn siden på nytt, og prøv igjen.
+# Error message when we failed to load the collaborators when user tries to edit a task
+be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = Det oppsto en feil ved gjennomføringen av denne oppgaven. Last inn siden på nytt, og prøv igjen.
 # Error message when a task creation fails
@@ -381,13 +385,17 @@ be.taskDeletePrompt = Er du sikker på at du vil slette denne oppgaven for godt?
 # Due date for a task
 be.taskDueDate = Forfaller
 # Error message when a task edit fails
-be.taskEditErrorMessage = Det oppstod en feil med å oppdatere denne oppgaven.
+be.taskEditErrorMessage = Det oppsto en feil da du endret denne oppgaven. Prøv igjen.
 # Text to show on menu item to edit task
 be.taskEditMenuItem = Endre oppgave
 # Reject option for a task
 be.taskReject = Avslå
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = Det oppsto en feil ved avvisningen av denne oppgaven. Last inn siden på nytt, og prøv igjen.
+# Button name to hide task assignee list
+be.taskShowLessAssignees = Show Less
+# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
+be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
 # label for button that opens task popup
 be.tasks.addTask = Legg til oppgave
 # label for menu item that opens approval task popup
@@ -1162,6 +1170,8 @@ boxui.unifiedShare.collaboration.userCollabText = Bruker
 boxui.unifiedShare.collaboratorListTitle = Personer i {itemName}
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = Tilgangen utløper {date}. Klikk her for å få mer informasjon.
+# Error message when more than the maximum number of contacts is entered
+boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = Dette innholdet deles med eksterne samarbeidspartnere.
 # Text used in button label to describe permission level - co-owner
