--- a/i18n/pt-BR.properties
+++ b/i18n/pt-BR.properties
@@ -222,6 +222,8 @@ be.previousFile = Arquivo anterior
 be.previousSegment = Segmento anterior
 # Label for print action
 be.print = Imprimir
+# If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
+be.priorCollaborator = A Prior Collaborator
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = Recentes
 # Message shown when there are no recent items.
@@ -366,6 +368,8 @@ be.taskActionErrorTitle = Erro
 be.taskApprove = Concluir
 # Error message when approving a task fails
 be.taskApproveErrorMessage = Ocorreu um erro ao aprovar esta tarefa. Atualize a página e tente novamente.
+# Error message when we failed to load the collaborators when user tries to edit a task
+be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = Ocorreu um erro ao completar esta tarefa. Atualize a página e tente novamente.
 # Error message when a task creation fails
@@ -381,13 +385,17 @@ be.taskDeletePrompt = Tem certeza de que deseja excluir permanentemente este tar
 # Due date for a task
 be.taskDueDate = Prazo
 # Error message when a task edit fails
-be.taskEditErrorMessage = Ocorreu um erro ao atualizar essa tarefa.
+be.taskEditErrorMessage = Ocorreu um erro ao modificar esta tarefa. Tente novamente.
 # Text to show on menu item to edit task
 be.taskEditMenuItem = Modificar tarefa
 # Reject option for a task
 be.taskReject = Recusar
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = Ocorreu um erro ao rejeitar esta tarefa. Atualize a página e tente novamente.
+# Button name to hide task assignee list
+be.taskShowLessAssignees = Show Less
+# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
+be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
 # label for button that opens task popup
 be.tasks.addTask = Adicionar tarefa
 # label for menu item that opens approval task popup
@@ -1162,6 +1170,8 @@ boxui.unifiedShare.collaboration.userCollabText = Usuário
 boxui.unifiedShare.collaboratorListTitle = Pessoas em '{itemName}'
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = O acesso expira em {date}. Clique para mais detalhes.
+# Error message when more than the maximum number of contacts is entered
+boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = Este conteúdo será compartilhado com colaboradores externos.
 # Text used in button label to describe permission level - co-owner
