--- a/i18n/sv-SE.properties
+++ b/i18n/sv-SE.properties
@@ -222,6 +222,8 @@ be.previousFile = Föregående fil
 be.previousSegment = Föregående segment
 # Label for print action
 be.print = Skriv ut
+# If a user has been deleted, we call the user "a prior collaborator" - meaning someone who used to be able to collaborate on the content.
+be.priorCollaborator = A Prior Collaborator
 # Shown as the title in the sub header when showing recents.
 be.recentsBreadcrumb = Senaste
 # Message shown when there are no recent items.
@@ -366,6 +368,8 @@ be.taskActionErrorTitle = Fel
 be.taskApprove = Slutför
 # Error message when approving a task fails
 be.taskApproveErrorMessage = Ett fel inträffade när uppgiften godkändes. Uppdatera sidan och försök igen.
+# Error message when we failed to load the collaborators when user tries to edit a task
+be.taskCollaboratorLoadErrorMessage = An error has occurred while loading collaborators for this task. Please try again.
 # Error message when completing a task fails
 be.taskCompleteErrorMessage = Ett fel inträffade när uppgiften slutfördes. Uppdatera sidan och försök igen.
 # Error message when a task creation fails
@@ -381,13 +385,17 @@ be.taskDeletePrompt = Vill du radera den här uppgiften permanent?
 # Due date for a task
 be.taskDueDate = Förfaller
 # Error message when a task edit fails
-be.taskEditErrorMessage = Ett fel inträffade när uppgiften skulle uppdateras.
+be.taskEditErrorMessage = Ett fel uppstod när uppgiften ändrades. Försök igen.
 # Text to show on menu item to edit task
 be.taskEditMenuItem = Modifiera uppgiften
 # Reject option for a task
 be.taskReject = Avvisa
 # Error message when rejecting a task fails
 be.taskRejectErrorMessage = Ett fel inträffade när uppgiften avvisades. Uppdatera sidan och försök igen.
+# Button name to hide task assignee list
+be.taskShowLessAssignees = Show Less
+# Button name to expand task assignee list, additionalAssigneeCount is the number of additional task assignees that can be shown.
+be.taskShowMoreAssignees = Show {additionalAssigneeCount} More
 # label for button that opens task popup
 be.tasks.addTask = Lägg till uppgift
 # label for menu item that opens approval task popup
@@ -1162,6 +1170,8 @@ boxui.unifiedShare.collaboration.userCollabText = Användare
 boxui.unifiedShare.collaboratorListTitle = Personer i "{itemName}"
 # This string is displayed as tooltip on hovering over expire icon for collab
 boxui.unifiedShare.collaborators.expirationTooltipClickableText = Åtkomst upphör {date}. Klicka för mer information.
+# Error message when more than the maximum number of contacts is entered
+boxui.unifiedShare.contactsExceedLimitError = Oops! The maximum number of collaborators that can be added at once is {maxContacts} collaborators. Please try again by splitting your invitations into batches.
 # Text shown in share modal when there is at least one external collaborators
 boxui.unifiedShare.contentSharedWithExternalCollaborators = Detta innehåll kommer att delas med externa medarbetare.
 # Text used in button label to describe permission level - co-owner
